# ACEngine

./: .gitignore  .replit  ACEngine.sln  ACEngine.vcxproj  ACEngine.vcxproj.filters  ACEngine_doxygen  AEFileWriter.hpp  AEFrame.hpp  AELog.hpp  AELog_types.hpp  AELogger_new.sln  AELogger_new.vcxproj  AELogger_new.vcxproj.filters  AEModuleBase.hpp  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  build.sh  cmake_build.bat  cmake_build.sh  cmake_clean.bat  cmake_clean.sh  log.txt  main  main.cpp  myProj.tag  replit.nix  temp  templog  todo.txt
.ccls-cache/@@home@runner@AELoggernew/: @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@__stddef_max_align_t.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdarg.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stddef.h.blob  @nix@store@4m98bsvjh538p292pr4604313mjmnpc5-clang-12.0.1-lib@lib@clang@12.0.1@include@stdint.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@backward@binders.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@alloc_traits.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@allocator.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_ios.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_ios.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_string.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@basic_string.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@char_traits.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@charconv.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@concept_check.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@cpp_type_traits.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@cxxabi_forced.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@cxxabi_init_exception.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@exception.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@exception_defines.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@exception_ptr.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@functexcept.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@functional_hash.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@hash_bytes.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@ios_base.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@istream.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@iterator_concepts.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@locale_classes.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@locale_classes.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@locale_facets.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@locale_facets.tcc.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@localefwd.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@memoryfwd.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@move.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@nested_exception.h.blob  @nix@store@dlni53myj53kx20pi4yhm7p68lw17b07-gcc-10.3.0@include@c++@10.3.0@bits@ostream.tcc.blob  (+141 more)
ACEngine/: ACEngine.cpp  ACEngine.vcxproj  ACEngine.vcxproj.filters  CMakeLists.txt  README.md  acengine_log.txt  acenginetest.txt  engine_log.txt  main.cpp  main_ACEngine.cpp
ACEngine/include/: AETypedefs.hpp
AECustomTypes/: AECustomTypes.vcxproj  AECustomTypes.vcxproj.filters  CMakeLists.txt  README.md  main_AECustomTypes.cpp
AECustomTypes/include/: AELogEntry.hpp  (+2 more)
AEFileReader/: AEFileReader.vcxproj  AEFileReader.vcxproj.filters  CMakeLists.txt  README.md  README.md.bak  main_AEFileReader.cpp  test.txt
AEFileWriter/: AEFileWriter.vcxproj  AEFileWriter.vcxproj.filters  CMakeLists.txt  README.md  hello.txt  main.cpp  main_AEFileWriter.cpp
AEFrame/: AEFrame.vcxproj  AEFrame.vcxproj.filters  CMakeLists.txt  README.md  main_AEFrame.cpp
AELogEntry/: AELogEntry.vcxproj  AELogEntry.vcxproj.filters  CMakeLists.txt  README.md  main_AELogEntry.cpp
AELogParser/: AELogParser.vcxproj  AELogParser.vcxproj.filters  CMakeLists.txt  README.md  main_AELogParser.cpp
AELogger/: AELogger.vcxproj  AELogger.vcxproj.filters  CMakeLists.txt  README.md  log.txt  main_AELogger.cpp  test.txt
AEMisc/: AEMisc.vcxproj  AEMisc.vcxproj.filters  CMakeLists.txt  README.md  main.cpp  main_Misc.cpp
AEModuleBase/: AEModuleBase.vcxproj  AEModuleBase.vcxproj.filters  CMakeLists.txt  README.md  main.cpp  main_AEModuleBase.cpp
AETimer/: AETimer.vcxproj  AETimer.vcxproj.filters  CMakeLists.txt  README.md  main_AETimer.cpp
AEVector/: AEVector.vcxproj  AEVector.vcxproj.filters  CMakeLists.txt  README.md  main_AEVector.cpp
AEVector/include/: AEVector.hpp
Debug/: README.txt
Release/: README.txt
__cmake_presets/: codeblocks.bat  codeblocks.sh  codeblocks_mingw.bat  codeblocks_nmake.bat  codeblocks_nmake_jom.bat  codeblocks_unix.sh  mingw.bat  msys.bat  nmake.bat  nmake_jom.bat  unix.sh  xcode.sh
__cppcheck/: ACEngine.cppcheck
docs/: CNAME  index.html
include/: README.txt
resources/: consoleprog1.rc  resource1.h
src/: README.txt
x64/: README.txt
(+1732 files in other folders)
